[package]
name = "sparter"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.1.5"
block-utils = "0.10.7"
bytesize = "1.1.0"
clap = { version = "3.1.18", features = ["derive"] }
gptman = "1.0.0"
mbrman = "0.4.2"
path-clean = "0.1.0"

[build-dependencies]
bytesize = "1.1.0"
clap = { version = "3.1.18", features = ["derive"] }
clap_complete = "3.1.4"
path-clean = "0.1.0"
