[tool.poetry]
name = "sys-replica"
version = "0.1.0"
description = ""
authors = ["Animesh Sahu <animeshsahu19@yahoo.com>"]
packages = [
    { include = "replica" }
]

[tool.autopep8]
max_line_length = 120

[tool.poetry.scripts]
replica = 'replica:main'

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
