[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
nanoid = "0.4.0"
redis = { version = "0.22.1", features = ["json", "serde", "tokio", "futures", "aio", "tokio-comp"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
